docs/GramaticaEuclides-64.ebnf
/* Program Structure */
program ::= statements

statements ::= statement | statement statements

/* Statements */
statement ::= declaration
            | assignment
            | expression ';'
            | if_stmt
            | while_stmt
            | for_stmt
            | output_stmt
            | input_stmt
            | func_decl
            | return_stmt
            | func_call_stmt
            | break_stmt
            | continue_stmt
            | adt_decl
            | ID '(' expression ')' ';'
            | agents_block

/* Declarations */
declaration ::= type ID ';'
              | type ID '=' expression ';'
              | type ID '[' expression ']' ';'

/* Types */
type ::= 'int' | 'float' | 'string' | 'bool' | 'char' | 'void' | ID

/* Expressions */
expression ::= expression '+' expression
             | expression '-' expression
             | expression '*' expression
             | expression '/' expression
             | expression '%' expression
             | expression '&&' expression
             | expression '||' expression
             | expression '==' expression
             | expression '!=' expression
             | expression '<' expression
             | expression '<=' expression
             | expression '>' expression
             | expression '>=' expression
             | expression '&' expression
             | expression '|' expression
             | expression '^' expression
             | expression '<<' expression
             | expression '>>' expression
             | '-' expression
             | '!' expression
             | '~' expression
             | '++' expression
             | '--' expression
             | '(' expression ')'
             | INTEGER
             | FLOAT
             | ID
             | ID '[' expression ']'
             | ID '.' ID
             | func_call
             | STRING
             | 'true'
             | 'false'

/* Assignments */
assignment ::= lvalue '=' expression ';'

lvalue ::= ID | ID '.' ID | ID '[' expression ']'

/* Functions */
func_decl ::= func_start statements 'endfunc'

func_start ::= 'func' ID '(' param_list_opt ')' ':'

param_list_opt ::= param_list | 

param_list ::= param | param ',' param_list

param ::= type ID | type ID '[' ']'

func_call_stmt ::= func_call ';'

func_call ::= ID '(' arg_list_opt ')'
            | ID '.' ID '(' arg_list_opt ')'

arg_list_opt ::= arg_list | 

arg_list ::= arg | arg ',' arg_list

arg ::= ID | expression

return_stmt ::= 'return' expression ';' | 'return' ';'

/* ADTs */
adt_decl ::= adt_head adt_body 'endadt'

adt_head ::= 'adt' ID '(' param_list_opt ')' ':'

adt_body ::= visibility_block adt_body | visibility_block

visibility_block ::= 'private' ':' member_list
                   | 'public' ':' member_list

member_list ::= member_decl member_list | member_decl

member_decl ::= type ID ';' | func_decl

/* Control Flow */
if_stmt ::= 'if' '(' expression ')' ':' statements 'endif'
          | 'if' '(' expression ')' ':' statements 'else' ':' statements 'endif'

while_stmt ::= 'while' '(' expression ')' ':' statements 'endwhile'

for_stmt ::= for_header statements 'endfor'

for_header ::= 'for' '(' ID 'in' expression 'range' expression ')' ':'

break_stmt ::= 'break' ';'

continue_stmt ::= 'continue' ';'

/* I/O */
output_stmt ::= 'output' expression ';'

input_stmt ::= 'input' ID ';'

/* Communicating Agents */

agents_block ::= 'agents' agent_statements 'endagents'

agent_statements ::= agent_statement 
                    | agent_statement agent_statements

agent_statement ::= agent_creation
                  | link_statement
                  | unlink_statement
                  | send_statement
                  | run_statement
                  | func_call_stmt

agent_creation ::= 'Agent' ID '=' 'create' 'agent' agent_paren_opt ';'

agent_paren_opt ::= '(' agent_arg ')' | 

agent_arg ::=  parent_arg | parent_arg ',' name_node_arg

parent_arg ::= ID

name_node_arg ::= STRING

link_statement ::= 'link' ID 'to' ID 'via' STRING ';'

unlink_statement ::= 'unlink' ID 'from' ID 'on' STRING ';'

send_statement ::= 'send' '{' json_statement '}' ';'

json_statement ::= 'type' ':' ID ',' 'payload' ':' '{' json_preload '}'

json_preload ::= 'channel' ':' STRING ',' 'origin' ':' ID ',' 'destiny' ':' ID

run_statement ::= 'run' ';'







/* Terminal definitions - SIMPLIFIED */
ID ::= [a-zA-Z][a-zA-Z0-9_]*
INTEGER ::= [0-9]+
FLOAT ::= [0-9]+ '.' [0-9]+
STRING ::= '"' [^"]* '"'
